testsuite/tests/parser/should_fail/T12811.stderr

T12811.hs:5:15: error: [GHC-62547]
    Illegal operator ‘.’ in type ‘foral a . a’
    Suggested fix: Perhaps you intended to use TypeOperators

T12811.hs:5:15: error: [GHC-76037]
    Not in scope: type constructor or class ‘.’
